...
            child: Column(
                crossAxisAlignment: CrossAxisAlignment.center,
                mainAxisAlignment: MainAxisAlignment.center,
                children: <Widget>[
                  MyTextField(
                      controller: _controllerEmail,
                      title: 'Email',
                      obscureText: false),
                  const SizedBox(height: 25),
                  MyTextField(
                      controller: _controllerPassword,
                      title: 'Password',
                      obscureText: true),

                  const SizedBox(height: 10),

                  // forgot password?
                  Padding(
...
                  const SizedBox(height: 25),

                  _errorMessage(),
                  const SizedBox(height: 20),

                  CustomSubmitButton(
                      text: 'Sign In', onPressed: signInWithEmailAndPassword),

                  const SizedBox(height: 35),

                  // or continue with
                  Padding(
                    padding: const EdgeInsets.symmetric(horizontal: 25.0),
...
