...
              labelType: NavigationRailLabelType.all,
              useIndicator: true,
              destinations: const <NavigationRailDestination>[
                NavigationRailDestination(
                  icon: Icon(Icons.home_outlined, size: 24),
                  selectedIcon: Icon(Icons.home, size: 24),
                  label: Text('Home'),
                ),
                NavigationRailDestination(
                  icon: Icon(Icons.subscriptions_outlined, size: 24),
                  selectedIcon: Icon(Icons.subscriptions, size: 24),
                  label: Text('My lists'),
                ),
...
