...
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                _buildHomeCarousel(_data.trendingMovies, isTablet),
                const SizedBox(height: 12),
                if (!isTablet)
                  _buildMovieSection(
                      'Trending Movies',
                      _data.trendingMovies,
                      (movies) => TrendingSlider(trendingMovies: movies),
                      Theme.of(context)),
                if (isTablet)
                  _buildMovieSection(
                      'Trending Movies',
...
