...
              background: Container(
                color: Theme.of(context).scaffoldBackgroundColor,
              ),
              titlePadding: const EdgeInsets.only(left: 12, bottom: 12),
              title: Text(
                key: const Key('my_lists_title'),
                'My Lists',
                style: Theme.of(context).textTheme.headlineSmall,
              ),
            ),
            actions: const [
              UserInfo(),
            ],
...
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                const SizedBox(height: 20),
                Text(
                  isOwnWatchlist
                      ? 'Press the + button to create your first watchlist'
                      : 'Followed watchlists will appear here',
                  style: const TextStyle(fontSize: 16),
                ),
                isOwnWatchlist
                    ? Lottie.asset(
                        'lib/assets/lottie_box.json',
...
                  },
                ),
                if (isOwnWatchlist &&
                    !(watchlist.collaborators.contains(currentUser!.id)))
                  ListTile(
                    leading: Icon(Icons.delete, color: theme.colorScheme.error),
                    title: Text('Delete',
                        style: theme.textTheme.titleMedium
                            ?.copyWith(color: theme.colorScheme.error)),
                    onTap: () {
                      Navigator.pop(context);
                      _showDeleteConfirmation(context, watchlist, onDelete);
                    },
...
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  TextFormField(
                    controller: _nameController,
                    style: theme.textTheme.bodyMedium,
                    decoration: InputDecoration(
                      labelText: 'Watchlist Name',
                      border: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(8),
                      ),
                      filled: true,
                    ),
                    validator: (value) {
...
                    }
                  },
                  style: ElevatedButton.styleFrom(
                    backgroundColor: theme.colorScheme.primary,
                    foregroundColor: theme.colorScheme.onPrimary,
                  ),
                  child: const Text('Create'),
                ),
              ],
            ),
          ],
        ),
      ),
...
