...
          _addedMovies.add(movie.toTinyMovie());
        });
        if (mounted) {
          ScaffoldMessenger.of(context).removeCurrentSnackBar();
          ScaffoldMessenger.of(context).showSnackBar(
            const SnackBar(
              content: Text('Successfully added to watchlist'),
            ),
          );
        }
      } catch (e) {
        logger.e('Error adding movie to watchlist: $e');
        if (mounted) {
...
