...
    if (!canEdit) {
      return const SizedBox.shrink();
    }
    return Padding(
      padding: const EdgeInsets.all(16.0),
      child: ElevatedButton.icon(
        key: const Key('add_movie_button'),
        style: ElevatedButton.styleFrom(
          minimumSize: const Size(double.infinity, 50),
          foregroundColor: theme.primary,
          backgroundColor: theme.surface,
          side: BorderSide(
            color: theme.primary,
...
